# rust-todo

client/: package-lock.json  package.json
server/: .env  Cargo.toml
server/migrations/: 0001_create_todos_table.sql
server/src/: db.rs  handlers.rs  main.rs  model.rs  repository.rs  service.rs
