[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }
tokio = { version = "1.47.1", features = ["full"] }
utoipa = { version = "5.4.0", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sqlx_migrator = { version = "0.18.0", features = ["postgres"] }
dotenv = "0.15.0"
